--- a/Copy_of_Untitled71.ipynb
+++ b/Copy_of_Untitled71.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMoQ2o44D3dlMoRvrgGZOUY",
+      "authorship_tag": "ABX9TyN0jRWTbt5ePNOG2tkzX/fJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2300,7 +2300,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2336,7 +2336,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2367,7 +2367,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2392,7 +2392,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2416,7 +2416,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2442,7 +2442,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2467,7 +2467,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2492,7 +2492,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2519,7 +2519,7 @@
       "metadata": {
         "id": "c_RGy0UlLGvj"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2547,7 +2547,7 @@
       "metadata": {
         "id": "nZpTNYR2Lxlg"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2566,14 +2566,489 @@
       "metadata": {
         "id": "zWhlHfbDiLqB"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Questions of Python.\n",
+        "#1. Write a program to display persons's name, age and address.\n",
+        "#2. write a program to swap two variables.\n",
+        "#3. Convert float into int.\n",
+        "#4. Write a program to take the details from a student for the id card and print in different lines.\n",
+        "#5. Write a program to take an used input as integer then convert into float.\n",
+        "\n",
+        "#sol1\n",
+        "name = \"Jatin\"\n",
+        "age = 23\n",
+        "address = \"S-604 A New Delhi- 110082\"\n",
+        "print(name)\n",
+        "print(age)\n",
+        "print(address)"
+      ],
+      "metadata": {
+        "id": "MW0zFindi_Fe",
+        "outputId": "6fbdceda-aa89-4946-ff9b-22870d5ca838",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Jatin\n",
+            "23\n",
+            "S-604 A New Delhi- 110082\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#sol2\n",
+        "a = [1,2,3]\n",
+        "b = [4,5,6]\n",
+        "\n",
+        "a,b = b,a\n",
+        "print(a)\n",
+        "print()\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "id": "FP9Ep1KkyEtw",
+        "outputId": "5f84ec0c-71cd-43d7-8472-f672ba1fb601",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[4, 5, 6]\n",
+            "\n",
+            "[1, 2, 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#sol3.\n",
+        "a = 1.23\n",
+        "integr = int(a)\n",
+        "print(integr)"
+      ],
+      "metadata": {
+        "id": "IMaBU050zimb",
+        "outputId": "cc1599b7-00dc-44a7-9d80-db546e81b3f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#sol4\n",
+        "name = input(\"Enter your name here: \")\n",
+        "age = int(input(\"Enter your age here: \"))\n",
+        "gender = input(\"Enter your gender here: \")\n",
+        "address = input(\"Enter your address here: \")"
+      ],
+      "metadata": {
+        "id": "zadxlQmAzyMO",
+        "outputId": "480df3ce-fe36-430d-8803-95947e0cbf2e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter your name here: John\n",
+            "Enter your age here: 23\n",
+            "Enter your gender here: Male\n",
+            "Enter your address here: S-604 A New Delhi- 110092\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#sol5\n",
+        "user_input = float(input(\"Enter the float number here: \"))"
+      ],
+      "metadata": {
+        "id": "PVlstH8S0RGD",
+        "outputId": "c81d7c08-8373-44d2-f274-e29e28360e32",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter the float number here: 1.233\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#sol5.\n",
+        "# Take input from the user\n",
+        "user_input = float(input(\"Enter a float number: \"))\n",
+        "\n",
+        "# Convert the float to an integer\n",
+        "converted_integer = int(user_input)\n",
+        "\n",
+        "# Display the converted integer\n",
+        "print(f\"The integer value is: {converted_integer}\")"
+      ],
+      "metadata": {
+        "id": "R6FTo-a12K3c",
+        "outputId": "9918694c-4175-4ba4-c27c-b70dc76dcc4d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a float number: 1.23\n",
+            "The integer value is: 1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**What is compiler and intrepreter?**\n",
+        "##**Python is both compiler and interopreted language means it can run the whole codes at one time and as well as run the codes linewise.**\n",
+        "\n",
+        "##Features-\n",
+        "\n",
+        "1.   Easy to learn\n",
+        "2.   Open source\n",
+        "3.   Widely used in the field of Analysing and for Visualization.\n",
+        "4.   Having wonderful libraries like numpy, pandas, matplotlib etc to perform the desirable task.\n",
+        "5.   It is also dynamically type which means can detect int, float and boolean etc by itself.\n",
+        "6.   Also object oriented- Object-oriented programming (OOP) is a way of writing code that organizes everything into \"objects.\" An object is like a small package that contains data (like a person’s name) and actions (like walking). OOP helps make programs easier to build, understand, and update.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "29rj6CV_28R_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Typecasting and subtypes.\n",
+        "#Two types of typecasting- one can change itself called implicit and the other type is we have to change manually called explicit.\n",
+        "#e.g implicit\n",
+        "a = 12\n",
+        "b = 2.43\n",
+        "print(a+b)"
+      ],
+      "metadata": {
+        "id": "jG5CRQEc2wos",
+        "outputId": "4e24ca45-791b-48c0-c147-fc178fd293f3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "14.43\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#e.g explicit\n",
+        "a = \"12\"\n",
+        "b = 1.23\n",
+        "a = int(a)\n",
+        "print(a+b)"
+      ],
+      "metadata": {
+        "id": "2uNopnMc6SFC",
+        "outputId": "f8073019-6dec-4df5-e86b-ffc5d1a0fffe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "13.23\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#logical operator- And, Or and Not.\n",
+        "23>34 or 34>21"
+      ],
+      "metadata": {
+        "id": "vri3ZKNc6iXP",
+        "outputId": "4bdf09df-48be-454d-f3f2-1a3d47462297",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "1==1 and 34>32"
+      ],
+      "metadata": {
+        "id": "G499brp2744b",
+        "outputId": "6fe9e2d2-226e-4891-a829-7c3382caba5d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "not(1==1 and 34>32)"
+      ],
+      "metadata": {
+        "id": "LU9FQmit7-to",
+        "outputId": "6e1e28ef-9cde-4735-a792-f7ebc03321d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "not(23>34 or 34>21)"
+      ],
+      "metadata": {
+        "id": "mou7lfes8Gsl",
+        "outputId": "e3d51963-5fa3-432a-9380-0139324a43dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Identity Operators\n",
+        "a = 123\n",
+        "b = \"1,2,3\"\n",
+        "print(a is not b)\n",
+        "print(a is b)"
+      ],
+      "metadata": {
+        "id": "d9CIfd-W8KX0",
+        "outputId": "8bc37e37-5cd2-46ff-ab2b-6a02ff0f2c8e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "marks = 75\n",
+        "if marks>95:\n",
+        "  print(\"You are going for a trip\")\n",
+        "elif marks>80 and marks<95:\n",
+        "  print(\"You will get a party\")\n",
+        "else:\n",
+        "  print(\"You definitely need imporvment\")"
+      ],
+      "metadata": {
+        "id": "CYEYeTn08YB9",
+        "outputId": "272ac0c5-4315-4d0e-cdc5-9655691af1de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "You definitely need imporvment\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Nested if-else statement-\n",
+        "marks = 92\n",
+        "if marks>90:\n",
+        "  print(\"Hey! Well done.\")\n",
+        "  if marks>=70 and marks<+90:\n",
+        "    print(\"You will surely come first\")\n",
+        "\n",
+        "else:\n",
+        "  print(\"Nothing to worry but you study.\")"
+      ],
+      "metadata": {
+        "id": "uZ23DJJ69ci5",
+        "outputId": "0ed6c996-40c3-42d9-d615-fd4c8aca13ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hey! Well done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#short hand if statement.\n",
+        "marks = 84\n",
+        "print(\"You will surely rock\") if marks > 90 else print(\"Father will punish you\")"
+      ],
+      "metadata": {
+        "id": "MAULXc9I9yfl",
+        "outputId": "e5bb8ad5-a179-4b10-873f-fbc811e1796e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Father will punish you\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "MW0zFindi_Fe"
+        "id": "7nWeAgjk-3-F"
       },
       "execution_count": null,
       "outputs": []
