--- a/Copy_of_Untitled71.ipynb
+++ b/Copy_of_Untitled71.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0jRWTbt5ePNOG2tkzX/fJ",
+      "authorship_tag": "ABX9TyPpRyXDq24opIIsAPQvKV7E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2594,7 +2594,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2626,7 +2626,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2654,7 +2654,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2681,7 +2681,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -2708,7 +2708,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -2739,7 +2739,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2788,7 +2788,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2815,7 +2815,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2839,7 +2839,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2865,7 +2865,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2891,7 +2891,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2917,7 +2917,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2947,7 +2947,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2977,7 +2977,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3008,7 +3008,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3033,7 +3033,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3046,9 +3046,246 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#1. Write a program to check if a number is positive.\n",
+        "#2. Write a program to check whether a number is odd or even.\n",
+        "#3. Write a program to create area calculator.\n",
+        "#4. Write a program check whether the passed letter is a vowel or not.\n",
+        "#5. Write a program to check if a number is a single digit number, 2-digits number and so on upto 5- digits.\"\""
+      ],
       "metadata": {
         "id": "7nWeAgjk-3-F"
+      },
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#sol1\n",
+        "num = int(input(\"Enter a number here: \"))\n",
+        "if num >=0:\n",
+        "  print(\"This is a positive number.\")\n",
+        "else:\n",
+        "  print(\"It is a negative number.\")"
+      ],
+      "metadata": {
+        "id": "i6AzlJs_Khvk",
+        "outputId": "30383137-14de-430d-e1d6-3009b082b307",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number here: 1\n",
+            "This is a positive number.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#sol2\n",
+        "num = int(input(\"Enter a number here: \"))\n",
+        "if num%2==0:\n",
+        "  print(\"It is a even number.\")\n",
+        "if num%2!=0:\n",
+        "  print(\"It is a odd number.\")"
+      ],
+      "metadata": {
+        "id": "wuutnso5K1Fo",
+        "outputId": "a8a4fb24-3487-4cd5-ee73-a0cf6bc0acb7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number here: 4\n",
+            "It is a even number.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#sol3 area calculator.\n",
+        "def rect_are(length, breath):\n",
+        "  print(length*breath)\n",
+        "rect_are(2,6)"
+      ],
+      "metadata": {
+        "id": "UJF5g3Z-LT0Y",
+        "outputId": "f9f47609-63ba-4388-af0f-96a1723218a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#sol3\n",
+        "#We can also find the area calculator by using input method.\n",
+        "\n",
+        "print(\"****Area Calculator****\")\n",
+        "\n",
+        "print(\"\"\"Press 1 to get the area of the Square\n",
+        "Press 2 to get the area of the rectangel\n",
+        "Press 3 to get the area of the circle\"\"\" )\n",
+        "\n",
+        "choice = int(input(\"Enter a number between 1-3: \"))\n",
+        "\n",
+        "if choice == 1:\n",
+        "  side = float(input(\"Enter the side of the square: \"))\n",
+        "  area_sq = side*side\n",
+        "  print(area_sq)\n",
+        "\n",
+        "elif choice == 2:\n",
+        "  length = float(\"Enter the length of the rectangle: \")\n",
+        "  breath = float(\"Enter the breath of the rectangle: \")\n",
+        "  area_rect = length*breath\n",
+        "  print(area_rect)\n",
+        "\n",
+        "elif choice == 3:\n",
+        "  radius = float(input(\"Enter the radius of the circle: \"))\n",
+        "  area_circle = 3.14*radius*radius\n",
+        "  print(area_circle)\n",
+        "\n",
+        "else:\n",
+        "  print(\"Wrong input\")"
+      ],
+      "metadata": {
+        "id": "xWR4snsVPy4m",
+        "outputId": "1b17e3a9-ee88-452d-9579-1d2e3ef0d2ce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "****Area Calculator****\n",
+            "Press 1 to get the area of the Square\n",
+            "Press 2 to get the area of the rectangel\n",
+            "Press 3 to get the area of the circle\n",
+            "Enter a number between 1-3: 3\n",
+            "Enter the radius of the circle: 7\n",
+            "153.86\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#sol4\n",
+        "letter = input(\"Enter a letter here: \")\n",
+        "if letter in \"aeiou\" or letter in \"AEIOU\":\n",
+        "  print('it is a vowel')\n",
+        "else:\n",
+        "  print(\"it is not a vowel\")"
+      ],
+      "metadata": {
+        "id": "rvtGgPjHToCr",
+        "outputId": "5dd9e4fa-eddd-4114-ac88-12c54d261b48",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a letter here: O\n",
+            "it is a vowel\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#sol5\n",
+        "#number = int(input(\"Enter a number here: \"))\n",
+        "#for i in range(0,99999):\n",
+        "#  if range(0,9):\n",
+        "#    print(\"It is a single digit number\")\n",
+        "#  elif range(10,99):\n",
+        "#    print(\"It is a double digit number\")\n",
+        "#  elif range(100,999):\n",
+        "#    print(\"It is a triple digit number\")\n",
+        "#  elif range(1000,9999):\n",
+        "#    print(\"It is a four digit number\")\n",
+        "#  elif range(10000,99999):\n",
+        "#    print(\"It is a five digit number\")\n",
+        "#  else:\n",
+        "#    print(\"It is not coming in our range.\")\n",
+        "\n",
+        "num = int(input(\"Enter the number in between 1-5 digits: \"))\n",
+        "if num==0 and num<=9:\n",
+        "  print(\"It is a single digit number.\")\n",
+        "elif num>=10 and num<=99:\n",
+        "  print(\"It is a double digit number.\")\n",
+        "elif num>=100 and num<=999:\n",
+        "  print(\"It is a three digit number.\")\n",
+        "elif num>=1000 and num<=9999:\n",
+        "  print(\"It is a four digit number.\")\n",
+        "elif num>=10000 and num<=99999:\n",
+        "  print(\"It is a five digit number.\")\n",
+        "else:\n",
+        "  print(\"Invalid Input\")"
+      ],
+      "metadata": {
+        "id": "oBOdb90mM01C",
+        "outputId": "65366fd1-460f-4870-9223-f533d58146d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number in between 1-5 digits: 999\n",
+            "It is a three digit number.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wOZTyon4OIK7"
       },
       "execution_count": null,
       "outputs": []
