--- a/Copy_of_Untitled71.ipynb
+++ b/Copy_of_Untitled71.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpRyXDq24opIIsAPQvKV7E",
+      "authorship_tag": "ABX9TyN/BOLGkxrb/w0WNp5gNha5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3056,7 +3056,7 @@
       "metadata": {
         "id": "7nWeAgjk-3-F"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3076,7 +3076,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3105,7 +3105,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3132,7 +3132,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3183,7 +3183,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3217,7 +3217,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3269,7 +3269,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3283,9 +3283,202 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#randomly solving the questions."
+      ],
       "metadata": {
         "id": "wOZTyon4OIK7"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#generating a fibonacci series.\n",
+        "a = 0\n",
+        "b = 1\n",
+        "print(a)\n",
+        "print(b)\n",
+        "for i in range(1,11):\n",
+        "  c = a + b\n",
+        "  a = b\n",
+        "  b = c\n",
+        "  print(c)"
+      ],
+      "metadata": {
+        "id": "QCDnuidSFMqU",
+        "outputId": "a30e6446-076f-4b83-c592-5f48e014f1a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "8\n",
+            "13\n",
+            "21\n",
+            "34\n",
+            "55\n",
+            "89\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fibonacci(n):\n",
+        "  a,b = 0,1\n",
+        "  for i in range(n):\n",
+        "    print(a)\n",
+        "    a,b = b, a+b\n",
+        "\n",
+        "fibonacci(10)"
+      ],
+      "metadata": {
+        "id": "pS9guNT1FjVx",
+        "outputId": "6a20a1f9-706b-4900-8997-855c859ad6e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "8\n",
+            "13\n",
+            "21\n",
+            "34\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#to find the prime numbers\n",
+        "num = int(input(\"Enter any number here: \"))\n",
+        "for i in range(1,11):\n",
+        "  if num % i == 0:                               #code not that efficient.\n",
+        "    print(\"It is not a prime number.\")\n",
+        "  else:\n",
+        "    print(\"It is a prime number.\")"
+      ],
+      "metadata": {
+        "id": "uERRlwEFF1Ry",
+        "outputId": "6b96c745-4daf-41f6-8542-74779e221fdc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter any number here: 3\n",
+            "It is not a prime number.\n",
+            "It is a prime number.\n",
+            "It is not a prime number.\n",
+            "It is a prime number.\n",
+            "It is a prime number.\n",
+            "It is a prime number.\n",
+            "It is a prime number.\n",
+            "It is a prime number.\n",
+            "It is a prime number.\n",
+            "It is a prime number.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#to check prime\n",
+        "num = int(input('Enter a number here: '))\n",
+        "if num <= 1:\n",
+        "  print(\"It is not a prime number.\")\n",
+        "else:\n",
+        "  for i in range(2,num):\n",
+        "    if num % i == 0:\n",
+        "      print(\"it is not a prime number.\")\n",
+        "      break\n",
+        "    else:\n",
+        "      print(\"It is a prime number.\")"
+      ],
+      "metadata": {
+        "id": "DsdhugLnGZM7",
+        "outputId": "a934bc43-8f46-4ffc-9e37-f97a559c60e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number here: 4\n",
+            "it is not a prime number.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#to find the sum of all the even number.\n",
+        "sum = 0\n",
+        "for i in range(1,21):\n",
+        "  if i % 2 == 0:\n",
+        "    sum += i\n",
+        "print(sum)"
+      ],
+      "metadata": {
+        "id": "ZsF1xjQJHpzI",
+        "outputId": "e1b9e007-db50-46f1-af13-84190b0fbd3d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "110\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ubNWDFdMIERz"
       },
       "execution_count": null,
       "outputs": []
