--- a/Copy_of_Untitled71.ipynb
+++ b/Copy_of_Untitled71.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/BOLGkxrb/w0WNp5gNha5",
+      "authorship_tag": "ABX9TyP5MOu7QxX1xMN7oD0vzoqt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3289,7 +3289,7 @@
       "metadata": {
         "id": "wOZTyon4OIK7"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3313,7 +3313,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3353,7 +3353,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3391,7 +3391,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3429,19 +3429,23 @@
       ],
       "metadata": {
         "id": "DsdhugLnGZM7",
-        "outputId": "a934bc43-8f46-4ffc-9e37-f97a559c60e7",
+        "outputId": "6714466c-282e-41ee-e758-f7f8ae5d2853",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter a number here: 4\n",
-            "it is not a prime number.\n"
+            "Enter a number here: 7\n",
+            "It is a prime number.\n",
+            "It is a prime number.\n",
+            "It is a prime number.\n",
+            "It is a prime number.\n",
+            "It is a prime number.\n"
           ]
         }
       ]
@@ -3463,7 +3467,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3476,9 +3480,98 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#to find the factorian of any number.\n",
+        "def fact(n):\n",
+        "  if n == 0 or n == 1:\n",
+        "    return n\n",
+        "  else:\n",
+        "    return n*fact(n-1)\n",
+        "\n",
+        "fact(5)"
+      ],
+      "metadata": {
+        "id": "ubNWDFdMIERz",
+        "outputId": "f61f8249-0936-42b6-c17b-1d9cf33fa53d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "120"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a program to reverse a string without using the built-in reverse function.\n",
+        "#Check if a given string is a palindrome.\n",
+        "#Write a program to count the number of vowels and consonants in a string.\n",
+        "#Find the first non-repeating character in a string.\n",
+        "#Write a program to check if two strings are anagrams of each other\n",
+        "\n",
+        "#sol1\n",
+        "a = \"A, B, C, D, E\"\n",
+        "a[::-1]\n",
+        "\n",
+        "#sol3 to check vowel and the consonent.\n",
+        "a = \"Hey brothers.\"\n",
+        "vowel = 0\n",
+        "for i in a:\n",
+        "  if i == \"a\" or i == \"A\" or i == \"E\" or i == \"e\" or i == \"i\" or i == \"I\" or i == \"O\" or i == \"o\" or i == \"U\" or i == \"u\":\n",
+        "    vowel += 1\n",
+        ""
+      ],
+      "metadata": {
+        "id": "LKYw9V28W9Pm"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#sol3 to check vowel and the consonent.\n",
+        "a = \"Hey brothers.\"\n",
+        "vowel = 0\n",
+        "for i in a:\n",
+        "  if i == \"a\" or i == \"A\" or i == \"E\" or i == \"e\" or i == \"i\" or i == \"I\" or i == \"O\" or i == \"o\" or i == \"U\" or i == \"u\":\n",
+        "    vowel += 1\n",
+        "print(vowel)"
+      ],
+      "metadata": {
+        "id": "ztwtRagwbPEl",
+        "outputId": "f57fde32-2e0c-4887-dda6-49c9f7ada750",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ubNWDFdMIERz"
+        "id": "1A3Fb-Uwc9YF"
       },
       "execution_count": null,
       "outputs": []
