--- a/Copy_of_Untitled71.ipynb
+++ b/Copy_of_Untitled71.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5MOu7QxX1xMN7oD0vzoqt",
+      "authorship_tag": "ABX9TyOZ3u4V3nA21xXJdrsboyX1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,12 +50,12 @@
       ],
       "metadata": {
         "id": "39tPRqxhd_mK",
-        "outputId": "6dc820a0-c307-4dd3-e75e-1af1192882f8",
+        "outputId": "5a479409-148d-4a6f-8d01-b029a21f58ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -3434,7 +3434,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3497,7 +3497,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3529,13 +3529,12 @@
         "vowel = 0\n",
         "for i in a:\n",
         "  if i == \"a\" or i == \"A\" or i == \"E\" or i == \"e\" or i == \"i\" or i == \"I\" or i == \"O\" or i == \"o\" or i == \"U\" or i == \"u\":\n",
-        "    vowel += 1\n",
-        ""
+        "    vowel += 1\n"
       ],
       "metadata": {
         "id": "LKYw9V28W9Pm"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3556,7 +3555,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3569,9 +3568,44 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#fibonacci\n",
+        "def fibonacci(n):\n",
+        "  a,b = 0,1\n",
+        "  for i in range(n):\n",
+        "    print(a)\n",
+        "    a,b = b,a+b\n",
+        "\n",
+        "fibonacci(10)"
+      ],
       "metadata": {
         "id": "1A3Fb-Uwc9YF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#to find the factorial\n",
+        "def fact(n):\n",
+        "  if n == 0 and n == 1:\n",
+        "    print(n)\n",
+        "  else:\n",
+        "    print(n*fact(n-1))\n",
+        "fact(3)"
+      ],
+      "metadata": {
+        "id": "ZH1XwUiDDmfR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xczOSIo-D3p9"
       },
       "execution_count": null,
       "outputs": []
