--- a/Copy_of_Untitled71.ipynb
+++ b/Copy_of_Untitled71.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZ3u4V3nA21xXJdrsboyX1",
+      "authorship_tag": "ABX9TyN4zp9hEZtwl474fzigVTnu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3579,33 +3579,425 @@
         "fibonacci(10)"
       ],
       "metadata": {
-        "id": "1A3Fb-Uwc9YF"
+        "id": "1A3Fb-Uwc9YF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "489f88d8-3590-420e-d655-e553f940bb81"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "8\n",
+            "13\n",
+            "21\n",
+            "34\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "#to find the factorial\n",
         "def fact(n):\n",
-        "  if n == 0 and n == 1:\n",
-        "    print(n)\n",
+        "  if n == 0 or n == 1:\n",
+        "    return n\n",
         "  else:\n",
-        "    print(n*fact(n-1))\n",
+        "    return (n*fact(n-1))\n",
         "fact(3)"
       ],
       "metadata": {
-        "id": "ZH1XwUiDDmfR"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZH1XwUiDDmfR",
+        "outputId": "4688925e-aee7-4d82-adf4-54ffe2d25b09"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#to check prime\n",
+        "num = int(input(\"Enter number: \"))\n",
+        "if num == 1 or num == 0:\n",
+        "  print(\"It is not prime\")\n",
+        "else:\n",
+        "  for i in range(2,num):\n",
+        "    if num%i == 0:\n",
+        "      break\n",
+        "      print(\"It is also not a prime number.\")\n",
+        "    else:\n",
+        "      print(\"It is a prime number\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xczOSIo-D3p9",
+        "outputId": "ae2d92c0-84cd-4b69-9a19-3a61995832ce"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter number: 5\n",
+            "It is a prime number\n",
+            "It is a prime number\n",
+            "It is a prime number\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Find the first non-repeating character in a string.\n",
+        "a = \"bibidybodidydy\"\n",
+        "a.count(\"o\")"
+      ],
+      "metadata": {
+        "id": "iP2BCnxQGAsJ",
+        "outputId": "1119b408-040d-49ce-820f-86e3971f77e6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a program to check if two strings are anagrams of each other.\n",
+        "str1 = \"listen\"\n",
+        "str2 = \"tensil\"\n",
+        "                                                       #these are not at all correct\n",
+        "if \"listen\" in str1 == \"tensil\" in str2:\n",
+        "  print(\"These are the anagrams\")\n",
+        "else:\n",
+        "  print(\"These are not the anagrams\")"
+      ],
+      "metadata": {
+        "id": "7s1hIyr3GbUV",
+        "outputId": "b430f683-2c83-4025-daf1-c8d963b0529f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "These are not the anagrams\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "str1 = \"listen\"\n",
+        "str2 = \"tensil\"\n",
+        "if sorted(str1) == sorted(str2):\n",
+        "  print(\"It is a anagram\")\n",
+        "else:\n",
+        "  print('NOt AT ALL anagrams')"
+      ],
+      "metadata": {
+        "id": "UCYdMnO0Hcm-",
+        "outputId": "b95def49-1a95-44fe-f27d-cf218a479bd2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "It is a anagram\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a program to find the largest and smallest number in a list.\n",
+        "#Write a program to reverse a list without using the built-in reverse function.\n",
+        "#Write a program to remove duplicates from a list.\n",
+        "#Write a program to find the second largest element in a list.\n",
+        "#Write a program to check if a list is sorted in ascending order.\n",
+        "#Write a program to find the sum of all elements in a list.\n",
+        "#Write a program to rotate the elements of a list to the right by k steps.\n",
+        "\n",
+        "#sol1\n",
+        "a = [1,2,3,4,5]\n",
+        "print(max(a))\n",
+        "print(min(a))\n",
+        "\n",
+        "#sol2\n",
+        "b = [1,2,3,4,5]\n",
+        "b[::-1]\n",
+        "\n",
+        "#to delete the duplicates.\n",
+        "a = [1,2,3,2,3,4,5]\n",
+        "a.remove(1)\n",
+        "print(a)\n",
+        "\n",
+        "a = [1, 2, 3, 12, 3, 45, 56]\n",
+        "\n",
+        "a.remove(3)\n",
+        "a.pop(2)\n",
+        "del a[2]\n",
+        "a.clear()"
+      ],
+      "metadata": {
+        "id": "NrueAilpIAfq",
+        "outputId": "cc113c87-62f0-4e7b-cb3c-cdafa44623a6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "1\n",
+            "[2, 3, 2, 3, 4, 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "a = [1,2,3,4,5,1,2,3,1]\n",
+        "df = pd.DataFrame(a)\n",
+        "df\n",
+        "\n",
+        "print(df.drop_duplicates(0))"
+      ],
+      "metadata": {
+        "id": "Fg-Uxe0LIn-m",
+        "outputId": "a260310a-cc6c-4a40-e67d-c69276ded1d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   0\n",
+            "0  1\n",
+            "1  2\n",
+            "2  3\n",
+            "3  4\n",
+            "4  5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#to find the second largest element in a list.\n",
+        "a = [1,2,3,4,5]\n",
+        "b = sorted(a)\n",
+        "b[-2]"
+      ],
+      "metadata": {
+        "id": "AoT8JqT2LSaj",
+        "outputId": "5c32bd62-a2d0-4934-9440-7d553e0c5548",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#to check if the lists are sorted or not.\n",
+        "a = [1,3,2,4,52,2]\n",
+        "if a == sorted(a):\n",
+        "  print(\"It is sorted\")\n",
+        "else:\n",
+        "  print(\"It is not at all sorted.\")"
+      ],
+      "metadata": {
+        "id": "CLBrnaBpLjAF",
+        "outputId": "618d26ce-1808-409c-d133-26d55baf6220",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "It is not at all sorted.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a program to find the sum of all elements in a list.\n",
+        "a = [1,2,3]\n",
+        "print(sum(a))"
+      ],
+      "metadata": {
+        "id": "qgT21BC4MxsB",
+        "outputId": "c66d5769-89b8-421a-fb14-138ea4b6189c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a program to rotate the elements of a list to the right by k steps.\n",
+        "def rotate_list_right(lst, k):\n",
+        "    k = k % len(lst)  # Handle k larger than list length\n",
+        "    return lst[-k:] + lst[:-k]  # Slice and combine\n",
+        "\n",
+        "# Example usage:\n",
+        "a = [1, 2, 3, 4, 5]\n",
+        "k = 2\n",
+        "rotated_list = rotate_list_right(a, k)\n",
+        "print(rotated_list)"
+      ],
+      "metadata": {
+        "id": "MGld2jN7M63h",
+        "outputId": "7a1bc6a4-8827-4307-df91-ceb9a5e411eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[4, 5, 1, 2, 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#to check prime in between 1 and 100.\n",
+        "number = int(input(\"Enter a number between 1 and 100: \"))\n",
+        "\n",
+        "if number > 1:  # Prime numbers are greater than 1\n",
+        "    for i in range(2, number):  # Check divisors from 2 to number-1\n",
+        "        if number % i == 0:  # If divisible, it's not prime\n",
+        "            print(\"Not prime\")\n",
+        "            break\n",
+        "    else:\n",
+        "        print(\"Prime\")  # Executes only if the loop doesn't break\n",
+        "else:\n",
+        "    print(\"Not prime\")"
+      ],
+      "metadata": {
+        "id": "OtXzSDLFNdNz",
+        "outputId": "a2dc3b7d-ec38-4499-8918-e4bbffebec1f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number between 1 and 100: 7\n",
+            "Prime\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "xczOSIo-D3p9"
+        "id": "qSDMFF-XPht-"
       },
       "execution_count": null,
       "outputs": []
